--- a/popup.html
+++ b/popup.html
@@ -8,15 +8,33 @@
     </head>
     <body>
         <h1>Study Timer</h1>
-        <div id="status">Ready to study?</div>
-        <div class="buttons">
-            <button id="startBtn">Start 25m Session</button>
-            <button id="stopBtn" disabled>Stop Session</button>
-                    <button id="exportBtn">Export Report</button>
-        </div>
         
-        <div id="countdown" class="countdown"></div>
+        <div class="timer-holder">
+            <div class="left">
+                <h3 class="timer-title">Timer</h3>
+                <div id="countdown" class="countdown"></div>
+                <div id="status">Ready to study?</div>
+            </div>
+            <div class="right">
+                <div class="progress-ring">
+                    <div id="ring-wrapper">
+                        <svg viewBox="0 0 160 160">
+                            <!-- background/track circle -->
+                            <circle class="track" cx="80" cy="80" r="70" />
+                            <!-- animated progress circle -->
+                            <circle id="progressCircle" class="progress" cx="80" cy="80" r="70" />
+                        </svg>
 
+                        <!-- centred pause button (optional) -->
+                    </div>
+                </div>
+            </div>
+        </div>
+        <div class="buttons">
+                    <button id="startBtn">Start</button>
+                    <button id="stopBtn" disabled>Stop</button>
+                    <button id="exportBtn">Export Report</button>
+                </div>
         <div id="log"></div>
         
         <script src="popup.js"></script>
