--- a/popup.html
+++ b/popup.html
@@ -7,7 +7,7 @@
         <link rel="stylesheet" href="style.css" />
     </head>
     <body>
-        <h1>Study Timer</h1>
+        <h1 class="title">Study Timer</h1>
         
         <div class="timer-holder">
             <div class="left">
