added comments for better documentation

--- a/offscreen.html
+++ b/offscreen.html
@@ -1,3 +1,5 @@
+<!---This file is the html "offscreen" doc that helps play audio persistently-->
+<!---BACKGROUND HTML DOC FOR AUDIO -->
 <!DOCTYPE html>
 <html>
     <head>
