--- a/popup.html
+++ b/popup.html
@@ -1,3 +1,4 @@
+<!---This is the main html file for the extension. Its simple and no, I didn't document the entire thing but do you really need a ton of comments for this??-->
 <!---EXTENSI0N/POPUP UI-->
 <!DOCTYPE html>
 <html lang="en">
